--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 
 
   <script>
-    var serviceWorkerVersion = '3771547035';
+    const serviceWorkerVersion = "2384466121";
     var scriptLoaded = false;
     function loadMainDartJs() {
       if (scriptLoaded) {
